style: Minor grammar correction and readability improvement

--- a/style.css
+++ b/style.css
@@ -24,10 +24,6 @@
 }
 
 
-<<<<<<< HEAD
-=======
-
->>>>>>> a988e2723a5985c18dd22df0843ddfc73c511515
 div {
   text-align: center;
 
@@ -72,10 +68,6 @@ div ol{
 div footer {
   position: absolute;
   width: 100%;
-<<<<<<< HEAD
   bottom: .5rem;
   font-size: 1.25rem;
-=======
-  bottom: 0;
->>>>>>> a988e2723a5985c18dd22df0843ddfc73c511515
 }
